fixed issue where scroll bar was shift page content

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -20,6 +20,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-y: overlay;
+}
+
 .App {
   display: flex;
   flex-direction: column;
